// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен остаться на текущем вопросе, если вопросы закончились и передан параметр showListingOnLastAnswer 1`] = `
<div
  className="AutoGuru"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={100}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruQuestion
      onAnswer={[Function]}
      question={
        Object {
          "answers": Array [
            Object {
              "answer": "От",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 50000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_from",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
            Object {
              "answer": "До",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 1000000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_to",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
          ],
          "answers_type": "input",
          "clear_params": Array [],
          "image_id": "price",
          "question": "1. Вопрос с пользовательским вводом",
        }
      }
      questionIndex={0}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <div
        className="AutoGuru__speechBubble"
      >
        Ответьте на несколько вопросов — наши алгоритмы подберут вам идеальную модель автомобиля.
      </div>
      <img
        className="AutoGuru__image"
        src="https://auto-export.s3.yandex.net/autoguru/images/price.svg"
      />
    </div>
  </div>
  <AutoGuruQuestionFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    searchCount={20}
    showReset={false}
  />
</div>
`;

exports[`должен остаться на текущем вопросе, если количество групп менее 5 и передан параметр showListingOnLastAnswer 1`] = `
<div
  className="AutoGuru"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={100}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruQuestion
      onAnswer={[Function]}
      question={
        Object {
          "answers": Array [
            Object {
              "answer": "От",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 50000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_from",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
            Object {
              "answer": "До",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 1000000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_to",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
          ],
          "answers_type": "input",
          "clear_params": Array [],
          "image_id": "price",
          "question": "1. Вопрос с пользовательским вводом",
        }
      }
      questionIndex={0}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <div
        className="AutoGuru__speechBubble"
      >
        Ответьте на несколько вопросов — наши алгоритмы подберут вам идеальную модель автомобиля.
      </div>
      <img
        className="AutoGuru__image"
        src="https://auto-export.s3.yandex.net/autoguru/images/price.svg"
      />
    </div>
  </div>
  <AutoGuruQuestionFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    searchCount={4}
    showReset={false}
  />
</div>
`;

exports[`должен отрендерить итоговую страницу, если вопросы закончились 1`] = `
<div
  className="AutoGuru AutoGuru_completed"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={100}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruCompletedContent
      groupsCount={20}
      onReset={[Function]}
      questionIndex={6}
      readyTextLines={Array []}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <div
        className="AutoGuru__loader"
      >
        <Svg
          className="AutoGuru__loaderImage"
          src="svgID"
        />
        <div
          className="AutoGuru__loaderText"
        >
          Формирование списка подходящих автомобилей...
        </div>
      </div>
    </div>
  </div>
  <AutoGuruCompletedFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    searchCount={20}
  />
</div>
`;

exports[`должен отрендерить итоговую страницу, если количество групп менее 5 1`] = `
<div
  className="AutoGuru AutoGuru_completed"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={100}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruCompletedContent
      groupsCount={4}
      onReset={[Function]}
      questionIndex={2}
      readyTextLines={Array []}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <div
        className="AutoGuru__loader"
      >
        <Svg
          className="AutoGuru__loaderImage"
          src="svgID"
        />
        <div
          className="AutoGuru__loaderText"
        >
          Формирование списка подходящих автомобилей...
        </div>
      </div>
    </div>
  </div>
  <AutoGuruCompletedFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    searchCount={4}
  />
</div>
`;

exports[`должен отрендерить страницу вопроса - второй вопрос, с футером 1`] = `
<div
  className="AutoGuru"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={17}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruQuestion
      onAnswer={[Function]}
      question={
        Object {
          "answers": Array [
            Object {
              "answer": "Да",
              "body_type_group": Array [
                "ALLROAD_5_DOORS",
                "HATCHBACK_5_DOORS",
                "MINIVAN",
                "SEDAN",
                "WAGON",
              ],
              "body_type_group_exclude": Array [],
              "search_param": "",
              "search_tag": Array [
                "wide-back-seats",
              ],
            },
            Object {
              "answer": "Нет",
              "body_type_group": Array [
                "ALLROAD",
                "HATCHBACK",
                "LIFTBACK",
                "SEDAN",
                "WAGON",
              ],
              "body_type_group_exclude": Array [],
              "search_param": "",
            },
          ],
          "answers_type": "radio",
          "clear_params": Array [],
          "question": "2. Планируете ли вы часто ездить на машине с семьей?",
        }
      }
      questionIndex={1}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <img
        className="AutoGuru__image"
        src="https://auto-export.s3.yandex.net/autoguru/images/question.svg"
      />
    </div>
  </div>
  <AutoGuruQuestionFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    searchCount={20}
    showReset={true}
  />
</div>
`;

exports[`должен отрендерить страницу вопроса - первый вопрос, без футера 1`] = `
<div
  className="AutoGuru"
>
  <ProgressBar
    className="AutoGuru__progress"
    theme="blue"
    value={0}
  />
  <div
    className="AutoGuru__breadcrumbs"
  >
    <AutoGuruBreadcrumbs
      breadcrumbs={Array []}
      onBreadcrumbClick={[Function]}
    />
  </div>
  <div
    className="AutoGuru__content"
  >
    <AutoGuruQuestion
      onAnswer={[Function]}
      question={
        Object {
          "answers": Array [
            Object {
              "answer": "От",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 50000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_from",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
            Object {
              "answer": "До",
              "body_type_group": Array [
                "",
              ],
              "body_type_group_exclude": Array [],
              "default_value": 1000000,
              "ready_prefix": "",
              "ready_text": "",
              "search_param": "price_to",
              "search_tag": Array [
                "",
              ],
              "search_tag_exclude": Array [],
              "skip_next": "",
            },
          ],
          "answers_type": "input",
          "clear_params": Array [],
          "image_id": "price",
          "question": "1. Вопрос с пользовательским вводом",
        }
      }
      questionIndex={0}
    />
    <div
      className="AutoGuru__imageWrapper"
    >
      <div
        className="AutoGuru__speechBubble"
      >
        Ответьте на несколько вопросов — наши алгоритмы подберут вам идеальную модель автомобиля.
      </div>
      <img
        className="AutoGuru__image"
        src="https://auto-export.s3.yandex.net/autoguru/images/price.svg"
      />
    </div>
  </div>
  <AutoGuruQuestionFooter
    isPending={true}
    onReset={[Function]}
    onShowListing={[Function]}
    showReset={false}
  />
</div>
`;

exports[`фейковый лоадер должен отрендерить лоадер при переходе к итоговой странице 1`] = `
<div
  className="AutoGuru__imageWrapper"
>
  <div
    className="AutoGuru__loader"
  >
    <Svg
      className="AutoGuru__loaderImage"
      src="svgID"
    />
    <div
      className="AutoGuru__loaderText"
    >
      Формирование списка подходящих автомобилей...
    </div>
  </div>
</div>
`;

exports[`фейковый лоадер должен показать обычное изображение после истечения таймаута 1`] = `
<div
  className="AutoGuru__imageWrapper"
>
  <img
    className="AutoGuru__image"
    src="https://auto-export.s3.yandex.net/autoguru/images/finish.svg"
  />
</div>
`;
